frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: svcveganpro
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: veganpro
  type: NodePort #ClusterIP
