frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: veganpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: '/'
        backend:
          serviceName: svcveganpro
          servicePort: 80
