frontend/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx-vegan
spec:
  podSelector:
    matchLabels:
      app: veganpro
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
